--- a/individual_params/config/default/sample_sensor_kit/sensor_kit_calibration.yaml
+++ b/individual_params/config/default/sample_sensor_kit/sensor_kit_calibration.yaml
@@ -76,14 +76,14 @@ sensor_kit_base_link:
     roll: -0.01
     pitch: 0.71
     yaw: -1.580
-  gnss_link:
+  smrc/gnss_link:
     x: -0.1
     y: 0.0
     z: -0.2
     roll: 0.0
     pitch: 0.0
     yaw: 0.0
-  tamagawa/imu_link:
+  smrc/imu_link:
     x: 0.0
     y: 0.0
     z: 0.0
