--- a/individual_params/config/default/sample_sensor_kit/sensor_kit_calibration.yaml
+++ b/individual_params/config/default/sample_sensor_kit/sensor_kit_calibration.yaml
@@ -3,9 +3,9 @@ sensor_kit_base_link:
     x: 0.015
     y: 0.0
     z: -0.805
-    roll: 0.0
-    pitch: 0.0
-    yaw: 0.0
+    roll: 1.57079632679
+    pitch: 3.14159265359
+    yaw: 1.57079632679
   lslidar_top_base_link:
     x: 0.0
     y: 0.0
